--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "bin-reader",
-    "version": "1.0.2",
+    "name": "@lamo2k123/bin-reader",
+    "version": "1.0.3",
     "author": {
         "name": "Aleksey Novikov",
         "email": "lamo2k123@gmail.com",
